--- a/core/src/main/resources/assets/communityradar/i18n/de_de.json
+++ b/core/src/main/resources/assets/communityradar/i18n/de_de.json
@@ -43,6 +43,10 @@
     "command": {
       "missingargument": "§cNicht genug Argumente. Gib /radar für die korrekte Syntax ein.",
       "listen": "§7Listen:§6",
+      "help" : {
+        "separator": "§8§l§m--------- §8[ §cRadar-Hilfe §8] §8§l§m---------§r",
+        "text" : "§7Custom listen:\n§c/radar listen §7--> §6Zeigt einem alle Listen an.\n§c/radar list add §e<Name> <Prefix> §7--> §6Erstellt eine Liste.\n§c/radar list prefix §e<Name> <Prefix> §7--> §6Ändert den Prefix einer Liste.\n§c/radar list delete §e<Name> §7--> §6Löscht eine Liste.\n§c/radar list show §e<Liste> §7--> §6Zeigt einem alle Spieler einer Liste.\n\n§7Checken:\n§c/radar check §e<Name> §7--> §6Checkt einen Spieler, ob er auf irgendeiner Liste ist.\n§c/radar check * §7--> §6Checkt den ganzen CB und gibt die Spieler aus, auf welcher Liste diese sind.\n\n§7Spieler und Listen:\n§c/radar player add §e<Liste> <Name> <Notizen...> §7--> §6Fügt einen Spieler auf eine Liste hinzu.\n§c/radar player remove §e<Name> §7--> §6entfernt einen Spieler von einer Liste."
+      },
       "list": {
         "add": {
           "success": "§aListe wurde erstellt!",
